@@ -1,3 +1,10 @@
+2009-09-02  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Refactoring/ExtractMethodTests.cs: Added some
+	  more complex test cases.
+
+	* TestBase.cs: Handled unlikely error in addin configuration.
+
 2009-08-31  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Refactoring/DeclareLocalTests.cs: Added declare
